# personal-dev-workflow

./: .gitignore  CLAUDE.md  README.md
scripts/: README.md  spec_index.py
specs/: 0001-create-task.md  0002-workspaces.md  0003-feature-intake.md  0004-issues-and-dependencies.md  0005-agent-execution.md  0006-browser-testing.md  0007-review-and-merge.md  0008-swimlanes-and-notifications.md  0009-claude-code-backend.md  README.md  _template.md
vibe-board/: Cargo.toml
vibe-board/migrations/: 0001_init.sql  0002_workspaces.sql
vibe-board/src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  workspace.rs  workspace_routes.rs
vibe-board/templates/: board.html  workspaces.html
vibe-board/tests/: spec_0001_create_task.rs  spec_0002_workspaces.rs
